--- a/css/style.css
+++ b/css/style.css
@@ -181,5 +181,23 @@ footer div {
   padding: 10px 20px;
   color: rgba(255, 255, 255, 0.976);
   
+  justify-content: space between;
+  .copyright {
+    margin: auto 0;
+  }
+  
+  .icons {
+    list-style-type: none;
+    display: inline-flex;
+  }
+  
+  .icons a {
+    margin: 0 8px;
+    color: rgb(255, 255, 255, 0.5);
+  }
+  
+  .icons a:hover {
+    color: rgb(255, 255, 255, 0.8);
+  }
 }
 
