--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ h2 {
   letter-spacing: 0.3px;
   text-align: left;
   color: #07393C;
-  padding: 10px 0px 10px 10px;
+  padding: 10px 20px 0 20px;
 }
 
 img {
