--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,9 @@ img {
 }
 
 .project {
-  box-shadow: 2 5px 10px 0 rgb(0 0 0 / 40%);  
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px #888888; 
   width: 100%;
 }
 
